syntax = "proto3";

option csharp_namespace = "Grpc.ChatServer";

package chat;

service Chat {
	rpc Login (LoginRequest) returns (MessageResponse);
	rpc EnterChat (EnterRequest) returns (stream ChatMessage);
	rpc JoinRoom (EnterRequest) returns (MessageResponse);
	rpc IsRoomOrDirect (CheckRequest) returns (CheckResponse);
	rpc SendMessage (ChatMessage) returns (MessageResponse);
	rpc SendMessageDirect (ChatMessage) returns (MessageResponse);
	rpc Logout (LogoutRequest) returns (MessageResponse);
}

message LoginRequest {
	string name = 1;
}

message LogoutRequest {
	string name = 1;
}

message EnterRequest {
	string name = 1;
	string room = 2;
	bool is_private = 3;
}

message CheckRequest {
	string name = 1;
}

message CheckResponse {
	bool is_room = 1;
	string info = 2;
}

message ChatMessage {
	string datetime = 1;
	string sender = 2;
	string receiver = 3;
	string message = 4;
	bool is_enter = 5;
}

message MessageResponse {
	bool success = 1;
	string info = 2;
}

